--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.2",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
-    "mongoose": "^5.0.10",
+    "mongoose": "^5.1.7",
     "morgan": "^1.9.0"
   }
 }
